--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recursos HTML y CSS</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="ulSection1">
+        <h1>Recursos HTML y CSS</h1>
+    <nav>
+        <ul>
+            <li class="menu"><a href="index.html">Inicio</a></li>
+            <li class="menu"><a href="box_model/box_model.html">CSS Box Model</a></li>
+            <li class="menu"><a href="">CSS Grid</a></li>
+            <li class="menu"><a href="">Etiquetas</a></li>
+            <li class="menu"><a href="Float/Float.html">Float</a></li>
+            <li class="menu"><a href="SEO/SEO.html">SEO</a></li>
+        </ul>
+    </nav>
+    </header>
+    <main>
+        <p>Somos </p>
+        <img class="" src="" alt="Team_Image">
+        <h2>Bienvenidos a Nombre del equipo</h2>
+     <div class="BrandThing">
+        <h1>Visto en</h1>
+        <div class="feature_in">
+        <img class="brand" src="https://i.ibb.co/2Pp3WFq/github.webp" alt="brand1">
+        <img class="brand" src="https://i.ibb.co/C6xb8dB/w3school.png" alt="brand2">
+        <img class="brand" src="https://i.ibb.co/4WncD1m/codecademy.webp" alt="brand3">
+        <img class="brand" src="https://i.ibb.co/TcgRHQR/freecodecamp.png" alt="brand4">
+        <div class="feature_in">
+     </div>
+     <div class="padding_testimony">
+        <p>Finalemente una pagina fiable con info actualizada</p>
+        <div class="TestimonyAndres">
+        <img src="">
+        <p>Andres, Peñascal F5</p>
+        </div> 
+     </div>
+    </main>
+<footer>
+    <nav>
+        <h1>seguidnos en nuestras redes sociales</h1>
+        <ul class="Social_Media">
+            <img class="social" src="https://i.ibb.co/47qdYyC/instagram-icon-512x512-ggh8x3cn.png" alt="Team_Image">
+            <img class="social" src="https://t4.ftcdn.net/jpg/05/32/20/03/240_F_532200355_odKN9Ou3WB6iHWJTFIElFtJbTuzJspY6.jpg" alt="Team_Image">
+            <img class="social" src="https://i.ibb.co/4M6Y7Yp/aHlicmlk.jpg" alt="Team_Image">
+            <img class="social" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="Team_Image">
+        </ul>
+    </nav>
+</footer>
+
 </body>
 </html>
+
