--- a/index.html
+++ b/index.html
@@ -9,46 +9,46 @@
 <body>
     <header class="ulSection1">
         <h1>Recursos HTML y CSS</h1>
+        <img src="Imagenes/logo/logo.png" alt="Team_Image">
+    </header>
     <nav>
-        <ul>
+        <ul class="ul1">
             <li class="menu"><a href="index.html">Inicio</a></li>
             <li class="menu"><a href="box_model/box_model.html">CSS Box Model</a></li>
-            <li class="menu"><a href="">CSS Grid</a></li>
+            <li class="menu"><a href="css_grid/css_grid.html">CSS Grid</a></li>
             <li class="menu"><a href="">Etiquetas</a></li>
             <li class="menu"><a href="Float/Float.html">Float</a></li>
             <li class="menu"><a href="SEO/SEO.html">SEO</a></li>
         </ul>
     </nav>
-    </header>
     <main>
-        <p>Somos </p>
-        <img class="" src="" alt="Team_Image">
+        <p class="somos">Somos </p>
+        <img class="logo" src="Imagenes/logo/logo.png" alt="Team_Image">
         <h2>Bienvenidos a Nombre del equipo</h2>
-     <div class="BrandThing">
-        <h1>Visto en</h1>
-        <div class="feature_in">
-        <img class="brand" src="https://i.ibb.co/2Pp3WFq/github.webp" alt="brand1">
-        <img class="brand" src="https://i.ibb.co/C6xb8dB/w3school.png" alt="brand2">
-        <img class="brand" src="https://i.ibb.co/4WncD1m/codecademy.webp" alt="brand3">
-        <img class="brand" src="https://i.ibb.co/TcgRHQR/freecodecamp.png" alt="brand4">
-        <div class="feature_in">
+        <h3>Visto en:</h3>
+        <div class="refe">
+            <img class="brand" src="https://i.ibb.co/2Pp3WFq/github.webp" alt="brand1">
+            <img class="brand" src="https://i.ibb.co/C6xb8dB/w3school.png" alt="brand2">
+            <img class="brand" src="https://i.ibb.co/4WncD1m/codecademy.webp" alt="brand3">
+            <img class="brand" src="https://i.ibb.co/TcgRHQR/freecodecamp.png" alt="brand4">
      </div>
-     <div class="padding_testimony">
-        <p>Finalemente una pagina fiable con info actualizada</p>
+     <h2 class="TestimonyH2">Testimonios</h2>
+     <div class="congrat">
+        <p>🎉Finalemente una pagina fiable con info actualizada🎉</p>
         <div class="TestimonyAndres">
-        <img src="">
-        <p>Andres, Peñascal F5</p>
+            <img src="https://i.ibb.co/BTm2yxs/image.png" alt="Logo Andres">
+            <p>Andres, Peñascal F5</p>
         </div> 
      </div>
     </main>
 <footer>
     <nav>
-        <h1>seguidnos en nuestras redes sociales</h1>
+        <h2>seguidnos en nuestras redes sociales</h2>
         <ul class="Social_Media">
-            <img class="social" src="https://i.ibb.co/47qdYyC/instagram-icon-512x512-ggh8x3cn.png" alt="Team_Image">
-            <img class="social" src="https://t4.ftcdn.net/jpg/05/32/20/03/240_F_532200355_odKN9Ou3WB6iHWJTFIElFtJbTuzJspY6.jpg" alt="Team_Image">
-            <img class="social" src="https://i.ibb.co/4M6Y7Yp/aHlicmlk.jpg" alt="Team_Image">
-            <img class="social" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="Team_Image">
+            <a href="https://instagram.com"><img class="social" src="https://i.ibb.co/47qdYyC/instagram-icon-512x512-ggh8x3cn.png" alt="Team_Image"></a>
+            <a href="https://facebook.com"><img class="social" src="https://i.ibb.co/Rvpqfq6/image.png" alt="Team_Image"></a>
+            <a href="https://x.com"><img class="social" src="https://i.ibb.co/4M6Y7Yp/aHlicmlk.jpg" alt="Team_Image"></a>
+            <a href="https://linkedin.com"><img class="social" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="Team_Image"></a>
         </ul>
     </nav>
 </footer>
