--- a/Float/Float.html
+++ b/Float/Float.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
     <style>
+        h3{
+            color: white;
+            background-color: rgb(184, 255, 91);
+        }
         .sub{
             background-color: rgb(184, 255, 91);
             padding: 10px 0 10px 0;
@@ -70,13 +74,13 @@
         <li class="menu"><a href="/index.html">Inicio</a></li>
         <li class="menu"><a href="/box_model/box_model.html">CSS Box Model</a></li>
         <li class="menu"><a href="/css_grid/css_grid.html">CSS Grid</a></li>
-        <li class="menu"><a href="">Etiquetas</a></li>
+        <li class="menu"><a href="/etiquetas/etiquetas.html">Etiquetas</a></li>
         <li class="menu"><a href="/Float/Float.html">Float</a></li>
         <li class="menu"><a href="/SEO/SEO.html">SEO</a></li>
     </ul>
 </nav>
 <main>
-    <h2 class="sub">Los Elementos FLotantes</h2>
+    <h2 class="sub">Los Elementos Flotantes</h2>
     <div class="float">
         <h3>Float</h3>
         <p class="etiq">Es una etiqueta de CSS que permite ubicar y mover un elemento en torno a un texto. Interviene en el flujo normal del texto y se integra en él según el valor que se le dé. Este elemento se llama elemento flotante y dependiendo del valor otorgado modifica el display.</p>
