--- a/css_grid/css_grid.html
+++ b/css_grid/css_grid.html
@@ -145,8 +145,8 @@ main {
        <ul class="ul1">
            <li class="menu"><a href="/index.html">Inicio</a></li>
            <li class="menu"><a href="/box_model/box_model.html">CSS Box Model</a></li>
-           <li class="menu"><a href="css_grid.html">CSS GRID</a></li>
-           <li class="menu"><a href="">Etiquetas</a></li>
+           <li class="menu"><a href="css_grid.html">CSS Grid</a></li>
+           <li class="menu"><a href="/etiquetas/etiquetas.html">Etiquetas</a></li>
            <li class="menu"><a href="/Float/Float.html">Float</a></li>
            <li class="menu"><a href="/SEO/SEO.html">SEO</a></li>
        </ul>
