--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <li class="menu"><a href="index.html">Inicio</a></li>
             <li class="menu"><a href="box_model/box_model.html">CSS Box Model</a></li>
             <li class="menu"><a href="css_grid/css_grid.html">CSS Grid</a></li>
-            <li class="menu"><a href="">Etiquetas</a></li>
+            <li class="menu"><a href="etiquetas/etiquetas.html">Etiquetas</a></li>
             <li class="menu"><a href="Float/Float.html">Float</a></li>
             <li class="menu"><a href="SEO/SEO.html">SEO</a></li>
         </ul>
     </nav>
     <main>
-        <p class="somos">Somos </p>
+        <p class="somos">Somos The Vikings Programmers</p>
         <img class="logo" src="Imagenes/logo/logo.png" alt="Team_Image">
         <h2>Bienvenidos a Nombre del equipo</h2>
         <h3>Visto en:</h3>
