--- a/SEO/SEO.html
+++ b/SEO/SEO.html
@@ -152,7 +152,7 @@ background-color: rgb(229, 229, 255);
                 <ul><li>Palabras claves más relevantes</li></ul>
 
                 <p>Contenido de calidad:</p>
-                <ul><li>exto bien estructurado y con buenas images</li></ul>
+                <ul><li>Texto bien estructurado y con buenas images</li></ul>
 
                 <p>HTML Tags:</p>
                 <ul><li>Usar etiquetas apropiadas como &lt;title&gt; | &lt;meta description&gt; | &lt;h1&gt; | &lt;h2&gt;</li></ul>
