--- a/Float/Float.html
+++ b/Float/Float.html
@@ -19,7 +19,7 @@
         .float {
             background-color: rgb(197, 252, 190);
             margin: 0;
-            padding: 2rem;
+            padding: 20px 0 20px 0;
         }
         .etiq{
             text-align: center;
@@ -28,7 +28,7 @@
         .sint{
             margin: 0.5rem 2rem;
         }
-        ul{
+        main ul{
             margin: 1rem 5rem;
         }
         .aaa{
@@ -37,12 +37,12 @@
         .clear{
             background-color: rgb(148, 223, 139);
             margin: 0;
-            padding: 2rem;
+            padding: 10px 0 10px 0;
         }
         .overflow{
             background-color: rgb(162, 182, 159);
             margin-bottom: 0;
-            padding: 2rem;
+            padding: 10px 0 10px 0;
         }
         .f_exp{
             display: flex;
@@ -62,6 +62,9 @@
             width: 30rem;
             display: flex;
         }
+
+        
+
     </style>
 </head>
 <body>
