--- a/SEO/SEO.html
+++ b/SEO/SEO.html
@@ -132,7 +132,7 @@ background-color: rgb(229, 229, 255);
             <li class="menu"><a href="/box_model/box_model.html">CSS Box Model</a></li>
             <li class="menu"><a href="/css_grid/css_grid.html">CSS Grid</a></li>
             <li class="menu"><a href="/etiquetas/etiquetas.html">Etiquetas</a></li>
-            <li class="menu"><a href="/Float/Float.html">Float</a></li>
+            <li class="menu"><a href="/Float/Float.html">CSS Box Sizing</a></li>
             <li class="menu"><a href="SEO.html">SEO</a></li>
         </ul>
     </nav>
